--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
   <html>
 
   <head>
-  <title>Welcome to memeti</title>
+  <title>Salon</title>
     <!--my links to bootstrap and CSS-->
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <!--my links to bootstrap and CSS-->
