--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
   <html>
 
-  <head>
-  <title>Salon</title>
+<head>
+  <title>Memeti Salon</title>
     <!--my links to bootstrap and CSS-->
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <!--my links to bootstrap and CSS-->
-  </head>
+    <link rel="stylesheet" href="/styles.css">
+</head>
+
+<nav class="navbar navbar-inverse">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Welcome</a>
+    </div>
+    <ul class="nav navbar-nav">
+    </ul>
+</nav>
   
     <body>
       <div class="container">
