--- a/views/salons.erb
+++ b/views/salons.erb
@@ -1,6 +1,7 @@
 <h1>Salonists</h1>
 
 <hr>
+<div class = salons>
 
   <% if @salons.any?() %>
     <ul>
@@ -15,6 +16,7 @@
       <p>There are no salons yet!</p>
 
   <% end %>
+</div>
 
   <hr>
 
