--- a/public/styles.css
+++ b/public/styles.css
@@ -14,13 +14,19 @@ body {
   overflow-x: hidden;
   background-image: url(https://careersportal.ie/mce/plugins/filemanager/files/DH/Makeup.JPG);
   color: black;
-  font-size: 24px;
+  font-size: 15px;
+  font-family: 'Raleway', sans-serif;
 }
 
 h1{
-	font-family: 'Ubuntu', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	color: black;
 	font-size: 65px;
+}
+
+h2{
+	font-size: 50px;
+	font-family: 'Raleway', sans-serif;
 }
 
 .button{
