--- a/public/styles.css
+++ b/public/styles.css
@@ -12,7 +12,7 @@ font-family: 'Ubuntu', sans-serif;*/
 
 body {
   overflow-x: hidden;
-  background-image: url(https://careersportal.ie/mce/plugins/filemanager/files/DH/Makeup.JPG);
+  background-image: url(https://thumbs.dreamstime.com/z/hair-salon-sign-scissors-design-elements-27031063.jpg);
   color: black;
   font-size: 15px;
   font-family: 'Raleway', sans-serif;
