refactored my code to make it Dry

--- a/views/description_form.erb
+++ b/views/description_form.erb
@@ -9,11 +9,9 @@
     </select>
 
     <label for="description">Client:</label>
-    <input id="description" name="description" type="text">
+    <input id="description" name="description" type="text" class="rq-form-element" autofocus/>
 
     <button type="submit">Add Client</button>
   </form>
 
   <hr>
-
-<a href="/"><button class="button btn">Return Home</button></a>
