--- a/views/salon_form.erb
+++ b/views/salon_form.erb
@@ -2,11 +2,9 @@
 
   <form action="/salons" method="post">
     <label for="name">Name:</label>
-    <input id="name" name="name" type="text">
+    <input id="name" name="name" type="text" class="rq-form-element" autofocus/>
 
     <button type="submit">Add</button>
   </form>
 
   <hr>
-
-<a href="/"><button class="button btn">Return Home</button></a>
