--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-inverse">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Welcome</a>
+      <a class="navbar-brand" href="/">Welcome hair salon <strong>Home</strong></a>
     </div>
     <ul class="nav navbar-nav">
     </ul>
