--- a/views/description_form.erb
+++ b/views/description_form.erb
@@ -1,17 +1,15 @@
 <h2>Choose A Salonist and assign a Client</h2>
-
-  <form action="/clients" method="post">
+<form action="/clients" method="post">
     <label for="salon_id">Select a List</label>
     <select id='salon_id' name='salon_id' type='text'>
-      <% @salons.each() do |salon| %>
-        <option value="<%= salon.id()%>"> <%= salon.name() %> </option>
-      <% end %>
+        <% @salons.each() do |salon| %>
+            <option value="<%= salon.id()%>">
+                <%= salon.name() %>
+            </option>
+            <% end %>
     </select>
-
     <label for="description">Client:</label>
     <input id="description" name="description" type="text" class="rq-form-element" autofocus/>
-
     <button type="submit">Add Client</button>
-  </form>
-
-  <hr>
+</form>
+<hr>
