--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,13 @@
 <h1>Hair Salon</h1>
-
 <hr>
-
-  <div class="container">
-    <a href="/add"><button class="button btn">Add Client to existing Salonist</button></a>
-    <a href="/salons"><button class="button btn">Salonists</button></a>
-    <a href="/salons/new"><button class="button btn">New Salonist</button></a>
-  </div
+<div class="container">
+    <a href="/add">
+        <button class="button btn">Add Client to existing Salonist</button>
+    </a>
+    <a href="/salons">
+        <button class="button btn">Salonists</button>
+    </a>
+    <a href="/salons/new">
+        <button class="button btn">New Salonist</button>
+    </a>
+    </div
